--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -126,6 +126,14 @@ body {
 .container-plans {
   margin-left: auto;
   margin-right: auto;
+  width: 80%;
+}
+
+.container-consult {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  width: 80%;
 }
 
 .container h2 {
@@ -286,6 +294,11 @@ table h3 {
 
 .calendly-inline-widget {
   margin-top: 100px;
+}
+
+.h3 {
+  font-size: 26px;
+  font-weight: 700;
 }
 
 @media screen and (max-width: 930px) {
